kubernetes/home/printer/spoolman/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &appName spoolman
  namespace: printer
  annotations:
    kubernetes.io/ingress.class: traefik
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Spoolman
    gethomepage.dev/group: Printer
    gethomepage.dev/icon: spoolman
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns.kubernetes.io/enabled: "true"
    external-dns.kubernetes.io/hostname: &host spoolman.saturn.ci
    external-dns.kubernetes.io/target: jupiter.saturn.ci
spec:
  rules:
    - host: *host
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: *appName
              port: 
                name: http
  tls:
    - secretName: *host
      hosts:
        - *host
